--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,1 +1,86 @@
-<p>reactive-form works!</p>
+<form [formGroup]="signUpForm" (ngSubmit)="signUp()">
+  <div class="form-group">
+    <label for="username">Full Name</label>
+    <input
+      formControlName="fullName"
+      type="text"
+      class="form-control"
+      id="username"
+      placeholder="Enter full name"
+    />
+  </div>
+  <div class="form-group">
+    <label for="add">Address</label>
+    <input
+      formControlName="address"
+      type="text"
+      class="form-control"
+      id="add"
+      placeholder="Enter full address"
+    />
+  </div>
+  <div class="form-group">
+    <label for="city">City</label>
+    <input
+      formControlName="city"
+      type="text"
+      class="form-control"
+      id="city"
+      placeholder="Enter city"
+    />
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input
+      formControlName="email"
+      type="email"
+      class="form-control"
+      id="exampleInputEmail1"
+      aria-describedby="emailHelp"
+      placeholder="Enter email"
+    />
+  </div>
+  <div class="form-group">
+    <label for="phoneNo">Phone No.</label>
+    <input
+      formControlName="phoneNo"
+      type="tel"
+      class="form-control"
+      id="phoneNo"
+      aria-describedby="phone"
+      placeholder="Enter mobile no"
+    />
+  </div>
+  <div class="form-group">
+    <label for="pwd">Password</label>
+    <input
+      formControlName="password"
+      type="password"
+      class="form-control"
+      id="pwd"
+      placeholder="Password"
+    />
+  </div>
+  <div class="form-group">
+    <label for="confirmPwd">Confirm Password</label>
+    <input
+      formControlName="confirmPwd"
+      type="password"
+      class="form-control"
+      id="confirmPwd"
+      placeholder="Password"
+    />
+  </div>
+  <div class="form-group form-check">
+    <input
+      type="checkbox"
+      formControlName="agreement"
+      class="form-check-input" 
+      id="exampleCheck1"
+    />
+    <label class="form-check-label" for="exampleCheck1"
+      >Agree with Terms & Conditions</label
+    >
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
