--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <div class="container">
-  <app-template-driven-form></app-template-driven-form>
-  <!-- <app-reactive-form></app-reactive-form> -->
+  <app-reactive-form></app-reactive-form>
 </div>
