--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -2,22 +2,36 @@
   <div class="form-group">
     <label for="username">Full Name</label>
     <input
-      formControlName="fullName"
       type="text"
+      name="fullName"
+      formControlName="fullName"
       class="form-control"
       id="username"
       placeholder="Enter full name"
     />
+    <div *ngIf="submitted && name && name.dirty && name?.errors">
+      <p [style]="{ color: 'red' }" *ngIf="name!.errors!['required']">
+        Name is required.
+      </p>
+    </div>
   </div>
   <div class="form-group">
     <label for="add">Address</label>
     <input
-      formControlName="address"
       type="text"
+      formControlName="address"
       class="form-control"
       id="add"
       placeholder="Enter full address"
     />
+    <div *ngIf="submitted && this.signUpForm.get('address')?.dirty">
+      <p
+        [style]="{ color: 'red' }"
+        *ngIf="this.signUpForm.get('address')!.errors?.['required']"
+      >
+        Address is required.
+      </p>
+    </div>
   </div>
   <div class="form-group">
     <label for="city">City</label>
@@ -28,6 +42,14 @@
       id="city"
       placeholder="Enter city"
     />
+    <div *ngIf="submitted && this.signUpForm.get('city')?.dirty">
+      <p
+        [style]="{ color: 'red' }"
+        *ngIf="signUpForm.controls['city'].errors?.['required']"
+      >
+        City name is required.
+      </p>
+    </div>
   </div>
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
@@ -39,17 +61,45 @@
       aria-describedby="emailHelp"
       placeholder="Enter email"
     />
+    <div *ngIf="submitted && this.signUpForm.get('email')?.dirty">
+      <p
+        [style]="{ color: 'red' }"
+        *ngIf="signUpForm.controls['email'].errors?.['required']"
+      >
+        Email is required.
+      </p>
+      <p
+        [style]="{ color: 'red' }"
+        *ngIf="signUpForm.controls['email'].errors?.['email']"
+      >
+        Enter a valid email
+      </p>
+    </div>
   </div>
   <div class="form-group">
     <label for="phoneNo">Phone No.</label>
     <input
       formControlName="phoneNo"
-      type="tel"
+      type="text"
       class="form-control"
       id="phoneNo"
       aria-describedby="phone"
       placeholder="Enter mobile no"
     />
+    <div *ngIf="submitted && signUpForm.get('phoneNo')?.dirty">
+      <p
+        [style]="{ color: 'red' }"
+        *ngIf="signUpForm.controls['phoneNo'].errors?.['minlength']"
+      >
+        Enter a valid mobile no of 10 digits
+      </p>
+      <p
+        [style]="{ color: 'red' }"
+        *ngIf="signUpForm.controls['phoneNo'].errors?.['required']"
+      >
+        Contact is required.
+      </p>
+    </div>
   </div>
   <div class="form-group">
     <label for="pwd">Password</label>
@@ -60,6 +110,14 @@
       id="pwd"
       placeholder="Password"
     />
+    <div *ngIf="submitted && signUpForm.get('password')?.dirty">
+      <p
+        [style]="{ color: 'red' }"
+        *ngIf="signUpForm.controls['password'].errors?.['required']"
+      >
+        Password is required
+      </p>
+    </div>
   </div>
   <div class="form-group">
     <label for="confirmPwd">Confirm Password</label>
@@ -70,12 +128,26 @@
       id="confirmPwd"
       placeholder="Password"
     />
+    <div
+      *ngIf=" submitted &&
+      signUpForm.get('confirmPwd')?.dirty
+      "
+    >
+      <p [style]="{ color: 'red' }"
+      *ngIf="signUpForm.controls['confirmPwd'].errors?.['required']">
+        Confirm Password is required field.
+      </p>
+      <p [style]="{ color: 'red' }"
+      *ngIf="signUpForm.controls['confirmPwd'].errors">
+        Password and Confirm Password not matching.
+      </p>
+    </div>
   </div>
   <div class="form-group form-check">
     <input
       type="checkbox"
       formControlName="agreement"
-      class="form-check-input" 
+      class="form-check-input"
       id="exampleCheck1"
     />
     <label class="form-check-label" for="exampleCheck1"
@@ -84,3 +156,4 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+{{ signUpForm.errors | json }}
